# cognate

./: Cargo.toml  Makefile  README.md  config.json
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  MANUAL_TESTING.md
example_notebook/: metadata.json
example_notebook/note1/: note.md
src/: main.rs  notebook.rs  notebook_io.rs
src/components/: mod.rs
src/components/editor/: editor.rs  message.rs  metadata_debounce.rs  mod.rs  note_coordinator.rs  reducer.rs  selection_handlers.rs  text_handlers.rs  update_handlers.rs
src/components/editor/actions/: label_actions.rs  mod.rs  note_actions.rs
src/components/editor/core/: clipboard.rs  embedded_image_service.rs  embedded_images.rs  image_tag_tests.rs  persistence.rs  preview.rs
src/components/editor/state/: editor_state.rs  mod.rs
src/components/editor/text_management/: mod.rs  (+2 more)
src/components/note_explorer/: mod.rs  note_explorer.rs
src/components/visualizer/: mod.rs  visualizer.rs
src/configuration/: mod.rs  reader.rs  theme.rs
src/counter/: counter.rs
src/editor/: editor.rs
src/json/: mod.rs  reader.rs
src/notebook/: error.rs  operations.rs  relative_path.rs  search.rs  storage.rs
src/tests/: mod.rs
src/tests/components/: editor_and_layout_test.rs  editor_message_flow_test.rs  editor_state_test.rs  label_actions_test.rs  mod.rs  note_actions_test.rs  note_explorer_test.rs  undo_and_content_test.rs  visualizer_test.rs
src/tests/configuration/: mod.rs  reader_test.rs  theme_test.rs
src/tests/json/: mod.rs  reader_test.rs
src/tests/notebook/: mod.rs  notebook_test.rs
(+18 files in other folders)
