[package]
name = "cognate"
version = "0.2.5"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["markdown"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.13.1"
native-dialog = "0.9.6"
toml = "1.0"
time = { version = "0.3", features = ["formatting"] }
