[package]
name = "cognate"
version = "0.5.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["markdown", "image", "canvas"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.13.1"
native-dialog = "0.9.6"
toml = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
arboard = "3.6.1"
base64 = "0.22.1"
png = "0.17.16"
thiserror = "2.0"
